[package]
name = "listallfrompscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
upstash-ratelimit="0.1.0"
redis = { version = "0.23.0" }
reqwest = { version = "0.11.18", features = ["blocking","json"] }
serde_json="1.0.96"
chrono="0.4.26"
rayon="1.7.0"
dotenv = "0.15.0"
prefstore= {git="https://github.com/visnkmr/prefstore.git"}
# prefstore= {path="../../rust/prefstore/prefstore/"}
serde = {version = "1.0.163", features = ["derive"]}
mysql="*"
# diesel = { version = "2.1.0", features = ["postgres"] }

url = "2.4.1"
rand = "0.8.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

tokio = { version = "1.28.2", features = ["full"] }
# sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-rustls"] }
vercel_runtime = "1.1.0"
# vercel_runtime = { version = "1.1.0", path = "../../crates/vercel_runtime" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "listall"
path = "api/listall.rs"

[[bin]]
name = "update"
path = "api/update.rs"

[[bin]]
name = "create"
path = "api/create.rs"

# [[bin]]
# name = "pscale"
# path = "api/pscale.rs"

[[bin]]
name = "_id_"
path = "api/user/[id].rs"